# pam

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  index.html  pyproject.toml
.github/workflows/: release.yml
docs/: PROJECT_STRUCTURE.md
skills/pam/assets/: design_spec_reference.md
skills/pam/references/: category-characters.md  executor-pixel.md  strategist.md
skills/pam/scripts/: README.md
skills/pam/workflows/: batch-animate.md  create-palette.md
skills/pixel-asset-master/: SKILL.md
skills/pixel-asset-master/references/: strategist.md
skills/pixel-asset-master/templates/: spec_lock_reference.md
skills/pixel-asset-master/templates/sprites/: sprites_index.json
skills/pixel-asset-master/workflows/: create-palette.md
src/pixel_asset_master/: __init__.py  cli.py  common.py  finalize.py  install_skill.py  palette.py  project.py  sheet.py  validate.py
src/pixel_asset_master/skills/pam/: SKILL.md
src/pixel_asset_master/skills/pam/assets/palettes/: palettes_index.json
src/pixel_asset_master/skills/pam/assets/sizes/: sizes_index.json
src/pixel_asset_master/skills/pam/references/: category-animals.md  category-creatures.md  category-items.md  category-plants.md  category-tiles.md  executor-pixel.md  shared-standards.md
