[project]
name = "pixel-asset-master"
version = "0.2.1"
description = "AI-driven 2D pixel game asset generation toolkit"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Pillow>=10.0.0",
]

[project.scripts]
pam = "pixel_asset_master.cli:main"
pixel-asset-master = "pixel_asset_master.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pixel_asset_master = ["skills/pam/**/*"]

[tool.uv]
package = true
